Merged Pull Request '#99 fix/java-warnings->main: FIX: Address Java compiler warnings'
- Eliminate this-escape where cheap: inline trivial setters to direct
  field writes; make createAndVerifyTempDir/init final
- Suppress remaining benign this-escape (this passed to collaborators,
  super.addSuppressed, superclass/builder setters)
- Replace deprecated new
URL(String) with URI-based construction
- Mark non-serializable CloudRequestException.responseHeaders transient
- Uncomment -Werror to prevent warning regressions
- Correct declaration of IWeightedValue<?>[]
- @SuppressWarnings("restricted") on load()